# amr_ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  pyproject.toml
notebook/: playground_examples.ipynb
scripts/: deploy_hf.py  download.py  ingest.py
src/: config.py  models.py
src/agents/: agents.py  models.py
src/pipeline/: converter.py  downloader.py  scraper.py  sources.py
src/rag/: ingestor.py  retriever.py
tests/: conftest.py  test_agents.py  test_download_cli.py  test_downloader.py  test_rag.py
tests/fixtures/: sample_index.html  sample_subpage.html
