[project]
name = "amr-ai"
version = "0.1.0"
description = "AI-powered Antimicrobial Resistance education platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    # HTTP
    "httpx>=0.27,<1.0",
    "tenacity>=8.2",
    # Scraping
    "scrapy>=2.11",
    "lxml>=5.0",
    # Document conversion
    "docling>=2.0",
    # Vector DB
    "chromadb>=0.5.0,<1.0",
    # Chroma 0.6.x uses pre-v6 posthog capture signature.
    "posthog>=2.4.0,<6.0",
    # Embeddings
    "sentence-transformers>=3.0.0,<4.0",
    "jupyter>=1.1.1",
    "openai>=2.29.0",
    "pydantic-ai>=1.61.0",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
