[project]
name = "amr-ai"
version = "0.1.0"
description = "AI-powered Antimicrobial Resistance education platform"
readme = "README.md"
requires-python = ">=3.13"

# Runtime dependencies for the Streamlit app on HF Spaces.
# Keep this list minimal — anything only used by the data pipeline,
# notebooks, or local dev tooling belongs in a dependency-group below.
dependencies = [
    # Core
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    # UI
    "streamlit>=1.55.0",
    # Vector DB (uses bundled ONNX MiniLM-L6-v2 for embeddings;
    # no sentence-transformers / torch needed at runtime)
    "chromadb>=0.5.0,<1.0",
    # Chroma 0.6.x still calls the pre-v6 posthog capture signature.
    "posthog>=2.4.0,<6.0",
    # Agents: slim build with only the providers/tools we actually use
    "pydantic-ai-slim[duckduckgo,openai]>=1.61.0",
    # Observability
    "logfire>=4.30.0",
]

[dependency-groups]
# Local dev only — tests, lint
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

# Data ingestion pipeline (scripts/download.py, scripts/ingest.py).
# Not needed to serve the app on HF Spaces.
#   uv sync --group pipeline
pipeline = [
    "httpx>=0.27,<1.0",
    "tenacity>=8.2",
    "scrapy>=2.11",
    "lxml>=5.0",
    "docling>=2.0",
]

# Notebook / exploration extras.
#   uv sync --group notebook
notebook = [
    "jupyter>=1.1.1",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
